--- a/01-Python_Crash_Course/Crash_Course.ipynb
+++ b/01-Python_Crash_Course/Crash_Course.ipynb
@@ -2,6 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## First Code\n",
     "**This notebook will cover the following topics in order:**\n",
@@ -14,34 +20,39 @@
     "    * Sets\n",
     "    * Dictionary\n",
     "    * Boolean\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+    "* Function :\n",
+    "    * Lambda\n",
+    "    * map\n",
+    "    * filter\n"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Number"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Number"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "2"
+      "text/plain": [
+       "2"
+      ]
      },
      "execution_count": 1,
      "metadata": {},
@@ -50,21 +61,23 @@
    ],
    "source": [
     "1 + 1"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "2.5"
+      "text/plain": [
+       "2.5"
+      ]
      },
      "execution_count": 2,
      "metadata": {},
@@ -73,21 +86,23 @@
    ],
    "source": [
     "2 * 1.25"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "1.0"
+      "text/plain": [
+       "1.0"
+      ]
      },
      "execution_count": 3,
      "metadata": {},
@@ -96,21 +111,23 @@
    ],
    "source": [
     "5/5"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "1"
+      "text/plain": [
+       "1"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -119,21 +136,23 @@
    ],
    "source": [
     "5 % 2"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "8"
+      "text/plain": [
+       "8"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -142,17 +161,17 @@
    ],
    "source": [
     "2 ** 3"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -167,43 +186,43 @@
     "y = 5.7\n",
     "z = (x+2*y) / (2*x-y)\n",
     "print(f\"x = {x}, y = {y}, z ={z}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### String"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### String"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "world = \"hello there\""
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "world = \"hello there\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,17 +234,17 @@
    ],
    "source": [
     "print(world.split())"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -237,43 +256,43 @@
    ],
    "source": [
     "print(world.upper())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### List"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### List"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "my_list = [[1,2,3],[[4,5],6,7,8],9,10]"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "my_list = [[1,2,3],[[4,5],6,7,8],9,10]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -285,17 +304,17 @@
    ],
    "source": [
     "print(my_list[0])"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -307,17 +326,17 @@
    ],
    "source": [
     "print(my_list[-1])"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -329,17 +348,17 @@
    ],
    "source": [
     "print(my_list[1][1:])"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -352,17 +371,17 @@
    "source": [
     "my_list[-2] = 9.1\n",
     "print(my_list)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -375,17 +394,17 @@
    "source": [
     "my_list.append(11)\n",
     "print(my_list)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -397,17 +416,17 @@
    ],
    "source": [
     "print(my_list.pop(-2))"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -419,45 +438,45 @@
    ],
    "source": [
     "print(my_list.index(9.1))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Dictionary"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Dictionary"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "outputs": [],
-   "source": [
-    "d = {1:'item 1',\n",
-    "     2:'item 2',\n",
-    "     3:'item 3'}"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "d = {1:'item 1',\n",
+    "     2:'item 2',\n",
+    "     3:'item 3'}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -469,17 +488,17 @@
    ],
    "source": [
     "print(d[2])"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -494,17 +513,17 @@
    "source": [
     "for key in d:\n",
     "    print(key, d[key])"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -516,17 +535,17 @@
    ],
    "source": [
     "print(d.get(4))"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -539,17 +558,17 @@
    "source": [
     "d[4] = None\n",
     "print(d)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -562,43 +581,43 @@
    "source": [
     "d.pop(4)\n",
     "print(d)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Tuple"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Tuple"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "outputs": [],
-   "source": [
-    "t = ('Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday')"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "t = ('Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -610,17 +629,17 @@
    ],
    "source": [
     "print(t[-1])"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -632,43 +651,43 @@
    ],
    "source": [
     "print(t[0::2])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Set"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Set"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "outputs": [],
-   "source": [
-    "s = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "s = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -681,17 +700,17 @@
    "source": [
     "s.add(11)\n",
     "print(s)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -704,29 +723,29 @@
    "source": [
     "s.remove(11)\n",
     "print(s)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Boolean"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Boolean"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -741,30 +760,111 @@
     "    print(True)\n",
     "else:\n",
     "    print(False)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Function"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "outputs": [],
-   "source": [],
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square(num:int = 1) ->int:\n",
+    "    return num**2\n",
+    "\n",
+    "print(square(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 6, 10, 14, 18, 22, 26, 30, 34, 38, 42, 46, 50, 54, 58, 62, 66, 70, 74, 78]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(lambda var: var*2, range(1,40,2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 10, 16, 22, 28, 34]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda var: var%2==0, range(1,40,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -778,7 +878,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a8c76e7dcc71b40825a074c8bfe36b09b1fa03537e3b19d2f1df1d305b588af0"
+   }
   }
  },
  "nbformat": 4,
